gcc/testsuite/gcc.dg/noncompile/init-2.c
int d[][] = { {1}, {2}, {3} };	/* { dg-error "incomplete element type" } */
